feat: 메뉴 리팩터링